# riscv-r32i-sim

./: .gitignore  CMakeLists.txt  README.md  package.json
Digital/: alu.dig  branch.dig  controller.dig  decoder-output-decoder.dig  main.dig  pc.dig  register-file-simple.dig
cmake/: toolchain.cmake  turing_complete.ld
src/: CMakeLists.txt  digital.S  helloworld.c
src/inc/: gpio.inc  memory_map.inc
src/runtime/: CMakeLists.txt  crt0.S  runtime_init.c
